# calibre_full_mcp_server

./: .dockerignore  .gitattributes  LICENSE  README.md  config.json  pyproject.toml  requirements.txt
doc/: Architecture.md  MCP configuration.json  Tasks.md  nltk future proofing.md
skills/: datatypes.md  search_basics.md  search_special_fields.md  search_structure.md
src/: config_manager.py  library_logic.py  logging_setup.py  prepare_nltk.py  server.py  worker.py  worker_pool.py
src/logic/: __init__.py  library_ops.py  metadata_ops.py  permissions.py  text_search.py
src/skills/: search_advanced.md  search_dates_numbers.md
tests/: conftest.py  test_advanced_features.py  test_book_export.py  test_book_read.py  test_book_write.py  test_bulk_update.py  test_content_pagination.py  test_field_values.py  test_library_ops.py  test_resources.py  test_search_content.py  test_server_config_optimization.py  test_worker_error_reporting.py
tests/test_files/: Your Servant, Sir.txt
tests/test_library/: full-text-search.db  metadata.db  metadata_db_prefs_backup.json
tests/test_library/.calnotes/: notes.db
tests/test_library/Mari Wolf/Robots of the World! Arise! (10)/: Robots of the World! Arise! - Mari Wolf.epub  metadata.opf
tests/test_library/Sol Boren/Your Servant, Sir (11)/: Your Servant, Sir - Sol Boren.epub  metadata.opf
