[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibre-full-mcp"
version = "0.1.0"
description = "Calibre Full MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "python-dateutil",
    "nltk"
]

[project.scripts]
calibre-full-mcp = "src.server:main"
calibre-full-mcp-setup = "src.prepare_nltk:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]
